# night_scrapa

./: .env  Cargo.toml  countries.json  features.md  scraper.db
.sqlx/: query-917ba2ba06ec5174c6bb3b5e6fc3aa8753f7b957d71061e17055fd8541244bc4.json
migrations/: 0002_add_columns_to_countries.sql  20250311151504_add_timestamps_columns_to_countries.sql
src/: main.rs
