[package]
name = "night_scrapa"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.17"  # For parsing HTML
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
dotenv = "0.15" # To load environment variables for database credentials